--- a/DigitalClock.css
+++ b/DigitalClock.css
@@ -1,14 +1,28 @@
 body {
-    background: black;
+    
+    background: rgb(96, 10, 182);
     display:flex;
     align-items: center;
     justify-content: center;
 }
+#center{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    
+    
+}
 
 .clock {
-   
-    color: #17D4FE;
-    font-size: 60px;
-    letter-spacing: 7px;
-
+    
+    padding: 150px 0;
+    color: #83fe17;
+    font-size: 100px;
+    color:rgb(17, 217, 50);
+    font-size: 165px;
+    letter-spacing: 20px;
+    font-weight: bolder;
+    border: 15px solid rgb(117, 128, 0);
+    
+    
 }
